--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <article class="product-card" tabindex="0">
       <img src="https://images.pexels.com/photos/715688/pexels-photo-715688.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Điện thoại thông minh hiện đại" />
       <div class="product-info">
-        <div class="product-name">Điện thoại thông minh</div>
+        <div class="product-name">Điện thoại thông minh 1</div>
         <div class="product-price">5,000,000₫</div>
         <button class="buy-btn" aria-label="Mua Điện thoại thông minh">Mua</button>
       </div>
