Chinh sua ngay 22.12.2025

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-  <h1>Sản phẩm nổi bật</h1>
+  <h1>Sản phẩm nổi bật của Minhyoyo</h1>
 </header>
 <main>
   <section class="product-grid" aria-label="Danh sách sản phẩm">
@@ -48,7 +48,7 @@
       <img src="https://images.pexels.com/photos/3755762/pexels-photo-3755762.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Máy ảnh kỹ thuật số với lens" />
       <div class="product-info">
         <div class="product-name">Máy ảnh kỹ thuật số</div>
-        <div class="product-price">8,000,000₫</div>
+        <div class="product-price">9,000,000₫</div>
         <button class="buy-btn" aria-label="Mua Máy ảnh kỹ thuật số">Mua</button>
       </div>
     </article>
@@ -56,7 +56,7 @@
       <img src="https://images.pexels.com/photos/1334597/pexels-photo-1334597.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Ba lô đi học màu xanh" />
       <div class="product-info">
         <div class="product-name">Ba lô đi học</div>
-        <div class="product-price">500,000₫</div>
+        <div class="product-price">600,000₫</div>
         <button class="buy-btn" aria-label="Mua Ba lô đi học">Mua</button>
       </div>
     </article>
