--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-  <h1>Sản phẩm nổi bật của Minhyoyo</h1>
+  <h1>Sản phẩm nổi bật Minhyoyo Shop</h1>
 </header>
 <main>
   <section class="product-grid" aria-label="Danh sách sản phẩm">
